# HotSpotter

./: CMakeLists.txt  README.md
client/: .gitignore  CMakeLists.txt  README.md  make_fonts.sh
client/src/: CMakeLists.txt  globals.hpp  hot_spotter.cpp
client/src/attacher/impl/: LinuxAttacher.cpp  WindowsAttacher.cpp
client/src/class_dumper/: class_dumper.cpp
client/src/gui/: MainWindow.cpp  MainWindow.hpp  Window.hpp  gui.cpp  gui.hpp
client/src/gui/components/: FileTree.hpp  file_tree.cpp  file_tree.hpp
client/src/gui/widgets/: ClassList.cpp  ClassList.hpp  ClassView.cpp  ClassView.hpp  Toolbar.cpp  Toolbar.hpp  Widget.hpp
client/src/hooks/: hooks.cpp  hooks.hpp
client/src/logger/: logger.hpp  logger.inl
client/src/logger/impl/: logger_linux.cpp  logger_windows.cpp
client/src/platform/: dllmain.cpp  entry_linux.cpp  entry_windows.cpp
client/src/reflection/: reflection.cpp  reflection.hpp
client/src/utils/: io_utils.cpp  io_utils.hpp  java_utils.cpp  java_utils.hpp
injector/: CMakeLists.txt  main.cpp
